--- a/manifest.json
+++ b/manifest.json
@@ -1,8 +1,8 @@
 {
-    "name" : "uni",
+    "name" : "uniapp-demo",
     "appid" : "__UNI__0C79592",
-    "description" : "",
-    "versionName" : "1.0.0",
+    "description" : "uniapp组件demo",
+    "versionName" : "1.1.0",
     "versionCode" : "100",
     "transformPx" : false,
     /* 5+App特有相关 */
@@ -68,5 +68,7 @@
     "uniStatistics" : {
         "enable" : false
     },
-    "vueVersion" : "2"
+    "vueVersion" : "2",
+    "locale" : "auto",
+    "fallbackLocale" : "zh-Hans"
 }
